--- a/cloud-layer-helper/cloud-layer-code-generate/pom.xml
+++ b/cloud-layer-helper/cloud-layer-code-generate/pom.xml
@@ -31,6 +31,15 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>3.5.3</version>
+        </dependency>
     </dependencies>
 
 </project>
